--- a/app/templates/usuarios.html
+++ b/app/templates/usuarios.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h1>Bienvenido a mi aplicación Flask</h1>
-    <!-- Aquí puedes agregar el contenido de tu página de inicio -->
+    {{ users }}
 {% endblock %}
