--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,22 @@
 </head>
 <body>
     <div class="container">
-        {% block content %}
-        {% endblock %}
+
+        <div class="flash_message">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-danger" role="alert">
+                        {% for message in messages %}
+                            {{ message }}
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            {% endwith %}
+        </div>
+        <div class="content">
+            {% block content %}
+            {% endblock %}
+        </div>
     </div>
     <!-- Aquí puedes agregar otros enlaces a JavaScript si es necesario -->
 </body>
