--- a/app/templates/user/usuarios.html
+++ b/app/templates/user/usuarios.html
@@ -3,6 +3,6 @@
 {% block title %}Usuarios- Flask App{% endblock %}
 
 {% block content %}
-    <h1>Bienvenido a mi aplicación Flask</h1>
+    <h1>Usarios Flask</h1>
     {{ users }}
 {% endblock %}
