gooo rc1-adduser

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,7 +63,7 @@
                 {% if current_user.role == 'admin' %}
                 <ul>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('register') }}">Añadir usuarios</a>
+                        <a class="nav-link" href="{{ url_for('admin_register') }}">Añadir usuarios</a>
                     </li>
                 </ul>
                 {% endif %}
