--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,17 @@
+<!-- app/templates/index.html -->
+
 {% extends "base.html" %}
 
-{% block title %}Inicio - Flask App{% endblock %}
+{% block title %}Inicio{% endblock %}
 
 {% block content %}
-    <h1>Bienvenido a mi aplicación Flask</h1>
-    <!-- Aquí puedes agregar el contenido de tu página de inicio -->
+    {% if not current_user.is_authenticated %}
+        <div class="jumbotron">
+            <h1 class="display-4">¡Bienvenido a nuestra aplicación!</h1>
+            <p class="lead">Regístrate ahora para comenzar a disfrutar de todas las funcionalidades.</p>
+            <hr class="my-4">
+            <p>Puedes acceder a características exclusivas al registrarte en nuestra plataforma.</p>
+            <a class="btn btn-primary btn-lg" href="{{ url_for('register') }}" role="button">Registrarse</a>
+        </div>
+    {% endif %}
 {% endblock %}
