--- a/app/templates/user/new_user.html
+++ b/app/templates/user/new_user.html
@@ -1,6 +1,6 @@
 <!-- app/templates/new_user.html -->
 
-{% extends "base.html" %}
+{% extends "splash.html" %}
 
 {% block title %}Registro Nuevo Usuario{% endblock %}
 
