--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -1,6 +1,6 @@
 <!-- app/templates/user/register.html -->
 
-{% extends "base.html" %}
+{% extends "splash.html" %}
 
 {% block title %}Registro{% endblock %}
 
