--- a/app/templates/config.html
+++ b/app/templates/config.html
@@ -1,6 +1,6 @@
 <!-- app/templates/config.html -->
 
-{% extends "base.html" %}
+{% extends "splash.html" %}
 
 {% block title %}Configuración{% endblock %}
 
