--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -1,123 +1,112 @@
-
-    <div class="container">
-      <div class="row align-items-center py-2">
-        <div class="col-md-auto">
-          <a href="{{ url_for('index') }}">
-            <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="img-fluid">
-          </a>
+<div class="container">
+  <div class="row align-items-center py-2">
+    <div class="col-md-auto">
+      <a href="{{ url_for('index') }}">
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="img-fluid">
+      </a>
+    </div>
+    <div class="col-md-6 text-center me-auto">
+      <form id="searchForm" class="d-flex justify-content-center">
+        <div class="input-group"> <!-- Utilizamos un input-group para agrupar el input y el botón -->
+          <input id="searchInput" class="form-control form-control-lg" type="search" placeholder="Buscar"
+            aria-label="Search">
+          <button class="btn btn-outline-secondary btn-lg" type="button" id="searchButton"><i
+              class="fas fa-search"></i></button>
         </div>
-        <div class="col-md-6 text-center">
-          <form id="searchForm" class="d-flex justify-content-center">
-            <div class="input-group"> <!-- Utilizamos un input-group para agrupar el input y el botón -->
-              <input id="searchInput" class="form-control form-control-lg" type="search" placeholder="Buscar"
-                aria-label="Search">
-              <button class="btn btn-outline-secondary btn-lg" type="button" id="searchButton"><i
-                  class="fas fa-search"></i></button>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-auto text-end">
-          <div class="dropdown">
-            <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fas fa-question-circle"></i>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="#"><i class="fas fa-question-circle"></i> Ayuda</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Tickets</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> FAQ</a></li>
-            </ul>
-          </div>
-        </div>
-        {% if current_user.is_authenticated %}
-        <div class="col-md-auto text-end">
-          <div class="dropdown">
-            <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fas fa-user"></i> {{ current_user.username }}
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
-              {% if current_user.is_authenticated %}
-              <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
-              {% else %}
-              <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
-        {%endif%}
-      </div>
+      </form>
     </div>
 
-    <script>
-      // JavaScript para enviar el formulario al presionar Enter en la caja de búsqueda
-      document.getElementById("searchInput").addEventListener("keyup", function (event) {
-        if (event.key === "Enter") {
-          event.preventDefault(); // Prevenir el comportamiento predeterminado de enviar el formulario
-          document.getElementById("searchForm").submit(); // Enviar el formulario
-        }
-      });
 
-      // JavaScript para hacer clic en el botón de búsqueda al hacer clic en el ícono de búsqueda
-      document.getElementById("searchButton").addEventListener("click", function () {
-        document.getElementById("searchForm").submit(); // Enviar el formulario
-      });
-    </script>
+  </div>
+</div>
+
+<script>
+  // JavaScript para enviar el formulario al presionar Enter en la caja de búsqueda
+  document.getElementById("searchInput").addEventListener("keyup", function (event) {
+    if (event.key === "Enter") {
+      event.preventDefault(); // Prevenir el comportamiento predeterminado de enviar el formulario
+      document.getElementById("searchForm").submit(); // Enviar el formulario
+    }
+  });
+
+  // JavaScript para hacer clic en el botón de búsqueda al hacer clic en el ícono de búsqueda
+  document.getElementById("searchButton").addEventListener("click", function () {
+    document.getElementById("searchForm").submit(); // Enviar el formulario
+  });
+</script>
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Novedades</a>
-            </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Novedades</a>
+        </li>
 
-            <li class="nav-item">
-              {% if current_user.is_authenticated %}
-              <a class="nav-link" href="{{ url_for('index') }}">Hacerse Pro</a>
-              {% else %}
-              <a class="nav-link" href="{{ url_for('register') }}">Registrarse</a>
-              {% endif %}
-          </li>
-
-          </ul>
-          {% if current_user.is_authenticated and current_user.role == 'admin' %}
-          <div class="sidebar-dropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSidebar" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  <i class="fa-solid fa-crown"></i> admin
-                </a>
-                
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownSidebar">
-                  <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir usuarios</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Sistema</a></a></li>
-                </ul>
-               
-              </li>
-            </ul>
-          </div>
+        <li class="nav-item">
+          {% if current_user.is_authenticated %}
+          <a class="nav-link" href="{{ url_for('index') }}">Hacerse Pro</a>
+          {% else %}
+          <a class="nav-link" href="{{ url_for('register') }}">Registrarse</a>
           {% endif %}
-          {% if not current_user.is_authenticated %}
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('login') }}">
-                <i class="fa-solid fa-key"></i> login
-              </a>
-              </li>
-            </ul>
-              {% endif %}
-          
+        </li>
+
+      </ul>
+
+      <!--
+      <div class="col-md-auto text-end">
+        <div class="dropdown">
+          <a class="btn " href="#" role="button" id="dropdownMenuLink"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-question-circle"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="#"><i class="fas fa-question-circle"></i> Ayuda</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Tickets</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> FAQ</a></li>
+          </ul>
+        
         </div>
       </div>
-    </nav>
+    -->
 
+      {% if not current_user.is_authenticated %}
+      <div class="col-md-auto text-end">
+        <div class="dropdown">
+          <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
+            <i class="fa-solid fa-key"></i> login
+          </a>
+          <!--  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+            <li><a class="dropdown-item" href="#">Recuperar contraseña</a></li>
+          </ul> -->
+        </div>
+      </div>
+      {% else %}
+      <div class="col-md-auto text-end">
+        <div class="dropdown">
+          <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-user"></i> {{ current_user.username }}
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+            {% if current_user.is_authenticated %}
+            <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Tickets</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
+            {% else %}
+            <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+      {%endif%}
+
+    </div>
+  </div>
+</nav>
