--- a/app/templates/inc/sidebar.html
+++ b/app/templates/inc/sidebar.html
@@ -1,3 +1,42 @@
+{% if current_user.is_authenticated and current_user.role == 'usuario' %}
+<div class="sidebar-dropdown">
+  <ul class="navbar-nav">
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSidebar" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        <i class="fa-solid fa-crown"></i> Mis Sitios
+      </a>
+      
+     <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdownSidebar">
+        <li><a class="dropdown-item" href="{{ url_for('index') }}">Resumen</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('index') }}">Config</a></a></li>
+        <li><a class="dropdown-item" href="{{ url_for('index') }}">Sistema</a></a></li>
+      </ul>
+    -->
+    </li>
+  </ul>
+</div>
+{%endif %}
+{% if current_user.is_authenticated and current_user.role == 'admin' %}
+<div class="sidebar-dropdown">
+  <ul class="navbar-nav">
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSidebar" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        <i class="fa-solid fa-gear"></i> admin
+      </a>
+      
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdownSidebar">
+        <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir usuarios</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></a></li>
+        <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Sistema</a></a></li>
+      </ul>
+     
+    </li>
+  </ul>
+</div>
+{% endif %}
+
 <div class="accordion mb-3" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
