--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -1,13 +1,14 @@
 <div class="container">
   <div class="row align-items-center py-2">
-    <div class="col-md-auto">
+    <div class="col-md-3 mt-2">
       <a href="{{ url_for('index') }}">
         <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="img-fluid">
       </a>
     </div>
+<!--
     <div class="col-md-6 text-center me-auto">
       <form id="searchForm" class="d-flex justify-content-center">
-        <div class="input-group"> <!-- Utilizamos un input-group para agrupar el input y el botón -->
+       <div class="input-group"> 
           <input id="searchInput" class="form-control form-control-lg" type="search" placeholder="Buscar"
             aria-label="Search">
           <button class="btn btn-outline-secondary btn-lg" type="button" id="searchButton"><i
@@ -16,9 +17,45 @@
       </form>
     </div>
 
+-->
+<div class="col-md-6 text-center">
+</div>
+ {% if not current_user.is_authenticated %}
+      <div class="col-md-3 mt-2">
+        <div class="dropdown">
+          <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
+            <i class="fa-solid fa-key"></i> login
+          </a>
+          <!--  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+            <li><a class="dropdown-item" href="#">Recuperar contraseña</a></li>
+          </ul> -->
+        </div>
+      </div>
+      {% else %}
+      <div class="col-md-3 mt-2">
+        <div class="dropdown">
+          <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-user"></i> {{ current_user.username }}
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+            {% if current_user.is_authenticated %}
+            <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Cambiar Clave</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
+            {% else %}
+            <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+      {%endif%}
 
   </div>
 </div>
+
 
 <script>
   // JavaScript para enviar el formulario al presionar Enter en la caja de búsqueda
@@ -39,6 +76,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
@@ -74,6 +114,7 @@
         </div>
       </div>
     -->
+<!--
 
       {% if not current_user.is_authenticated %}
       <div class="col-md-auto text-end">
@@ -81,9 +122,9 @@
           <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
             <i class="fa-solid fa-key"></i> login
           </a>
-          <!--  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
             <li><a class="dropdown-item" href="#">Recuperar contraseña</a></li>
-          </ul> -->
+          </ul> 
         </div>
       </div>
       {% else %}
@@ -106,7 +147,7 @@
         </div>
       </div>
       {%endif%}
-
+-->
     </div>
   </div>
 </nav>
