--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -43,7 +43,7 @@
             <li><a class="dropdown-item" href="#">Mi perfil</a></li>
             <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
             <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Cambiar Clave</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Contraseña</a></li>
             <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
             {% else %}
             <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
@@ -56,7 +56,7 @@
   </div>
 </div>
 
-
+<!--
 <script>
   // JavaScript para enviar el formulario al presionar Enter en la caja de búsqueda
   document.getElementById("searchInput").addEventListener("keyup", function (event) {
@@ -71,7 +71,7 @@
     document.getElementById("searchForm").submit(); // Enviar el formulario
   });
 </script>
-
+-->
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
