--- a/app/templates/user/change_password.html
+++ b/app/templates/user/change_password.html
@@ -1,6 +1,6 @@
 <!-- app/templates/change_password.html -->
 
-{% extends "base.html" %}
+{% extends "splash.html" %}
 
 {% block title %}Cambiar Contraseña{% endblock %}
 
