--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -80,6 +80,19 @@
     <div class="container">
       <div class="row">
 
+        <!-- Breadcrumb -->
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+
+      {% for crumb in breadcrumbs %}
+        {% if loop.last %}
+          <li class="breadcrumb-item active" aria-current="page">{{ crumb.text }}</li>
+        {% else %}
+          <li class="breadcrumb-item"><a href="{{ crumb.url }}">{{ crumb.text }}</a></li>
+        {% endif %}
+      {% endfor %}
+    </ol>
+  </nav>
 
         <div class="col-md-2">
           {% include 'inc/sidebar.html' %}
