--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -5,7 +5,7 @@
         <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="img-fluid">
       </a>
     </div>
-<!--
+    <!--
     <div class="col-md-6 text-center me-auto">
       <form id="searchForm" class="d-flex justify-content-center">
        <div class="input-group"> 
@@ -18,40 +18,40 @@
     </div>
 
 -->
-<div class="col-md-6 text-center">
-</div>
- {% if not current_user.is_authenticated %}
-      <div class="col-md-3 mt-2">
-        <div class="dropdown">
-          <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
-            <i class="fa-solid fa-key"></i> login
-          </a>
-          <!--  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+    <div class="col-md-6 text-center">
+    </div>
+    {% if not current_user.is_authenticated %}
+    <div class="col-md-3 mt-2">
+      <div class="dropdown">
+        <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
+          <i class="fa-solid fa-key"></i> login
+        </a>
+        <!--  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
             <li><a class="dropdown-item" href="#">Recuperar contraseña</a></li>
           </ul> -->
-        </div>
       </div>
-      {% else %}
-      <div class="col-md-3 mt-2">
-        <div class="dropdown">
-          <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-user"></i> {{ current_user.username }}
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
-            {% if current_user.is_authenticated %}
-            <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
-            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
-            {% else %}
-            <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
-            {% endif %}
-          </ul>
-        </div>
+    </div>
+    {% else %}
+    <div class="col-md-3 mt-2">
+      <div class="dropdown">
+        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fas fa-user"></i> {{ current_user.username }}
+        </a>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+          {% if current_user.is_authenticated %}
+          <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
+          <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
+          {% else %}
+          <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
+          {% endif %}
+        </ul>
       </div>
-      {%endif%}
+    </div>
+    {%endif%}
 
   </div>
 </div>
@@ -71,8 +71,32 @@
     document.getElementById("searchForm").submit(); // Enviar el formulario
   });
 </script>
--->
+--><nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-lg-flex" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i><span class="d-lg-inline"> Dashboard</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="fas fa-newspaper"></i><span class="d-lg-inlie"> Novedades</span></a>
+        </li>
+        <li class="nav-item">
+          {% if current_user.is_authenticated %}
+          <a class="nav-link" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline"> Hacerse Pro</span></a>
+          {% else %}
+          <a class="nav-link" href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline"> Registrarse</span></a>
+          {% endif %}
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
+<!--
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
@@ -97,8 +121,6 @@
         </li>
 
       </ul>
-
-      <!--
       <div class="col-md-auto text-end">
         <div class="dropdown">
           <a class="btn " href="#" role="button" id="dropdownMenuLink"
@@ -147,7 +169,7 @@
         </div>
       </div>
       {%endif%}
--->
-    </div>
-  </div>
+      </div>
+</div>
 </nav>
+-->
