--- a/app/templates/inc/sidebar.html
+++ b/app/templates/inc/sidebar.html
@@ -17,7 +17,7 @@
   </ul>
 </div>
 {%endif %}
-{% if current_user.is_authenticated and current_user.role == 'admin' %}
+{% if is_admin %}
 <div class="sidebar-dropdown">
   <ul class="navbar-nav">
     <li class="nav-item dropdown">
