breadcrumbs admin panel

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 <!-- app/templates/index.html -->
 
-{% extends "splash.html" %}
+{% extends "base.html" %}
 
 {% block title %}Inicio{% endblock %}
 
