--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,4 +1,4 @@
-{% extends 'splash.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="container">
   <h1 class="my-4">Perfil de Usuario</h1>
