--- a/app/templates/user/reset_password.html
+++ b/app/templates/user/reset_password.html
@@ -1,6 +1,6 @@
 <!-- app/templates/reset_password.html -->
 
-{% extends "splash.html" %}
+{% extends "base.html" %}
 
 {% block title %}Restablecer contraseña{% endblock %}
 
