--- a/app/templates/base copy.html
+++ b/app/templates/base copy.html
@@ -22,16 +22,15 @@
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-
   <style>
     #sidebar {
       transition: all 0.3s;
-      margin-top: 60px;
+      margin-top: 100px;
       /* Ajusta este valor según sea necesario */
     }
 
     #main-content {
-      margin-top: 60px;
+      margin-top: 100px;
       /* Ajusta este valor según sea necesario */
     }
 
@@ -41,10 +40,14 @@
       position: fixed;
       width: 100%;
       top: 0;
-      z-index: 1000;
+      z-index: 777;
     }
 
-  
+    #dropdownMenuProfile {
+      z-index: 1000;
+
+    }
+
     .nav-options {
       display: flex;
       align-items: center;
@@ -55,60 +58,14 @@
       font-size: 18px;
     }
 
-    @media (max-width: 768px) {
 
-      #main-content,
-      #sidebar {
-        margin-top: 118px;
-        /* Ajusta el valor según sea necesario */
-      }
-
-      .nav-options .nav-item span {
-        display: none;
-      }
-    }
   </style>
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    .container-fluid {
-      flex: 1;
-    }
-
-    .footer {
-      margin-top: auto;
-      /* Esto empujará el footer hacia abajo */
-    }
-  </style>
-  <style>
-    /* Estilos para el modo oscuro */
-    .dark-mode {
+         /* Estilos para el modo oscuro */
+         .dark-mode {
       /* Define los colores y estilos para el modo oscuro */
       background-color: #333;
       color: #fff;
-    }
-  </style>
-  <style>
-    .nav-options .nav-item a {
-      display: inline-block;
-      padding: 8px 16px;
-      margin: 4px;
-      border: 1px solid transparent;
-      border-radius: 4px;
-      text-decoration: none;
-      color: #fff;
-      /* Color del texto */
-      background-color: #007bff !important;
-      /* Color de fondo */
-    }
-
-    .nav-options .nav-item a:hover {
-      background-color: #0056b3 !important;
-      /* Color de fondo al pasar el ratón */
     }
   </style>
   <script>
@@ -172,10 +129,9 @@
           height="30"></a>
       <div class="nav-options">
 
-        <a class="nav-item" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i><span
-            class="d-lg-inline"> Dashboard</span></a>
-        <a class="nav-item" href="#"><i class="fas fa-newspaper"></i><span class="d-lg-inline">Novedades</span></a>
-
+        <a class="nav-item" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+        <a class="nav-item" href="#"><i class="fas fa-newspaper"></i> Novedades</a>
+        
         {% if current_user.is_authenticated %}
         <a class="nav-item" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline">
             Premium</span></a>
@@ -191,7 +147,7 @@
         {% else %}
         <a class="btn btn-outline-secondary" href="{{ url_for('logout') }}"><i class="fa-solid fa-key"></i> Logout</a>
         {% endif %}
-
+        
 
       </div>
     </div>
@@ -205,12 +161,12 @@
       <div class="col-3 bg-light" id="sidebar">
         <div class="p-3">
           <nav class="accordion" id="sidebar-menu">
-            {% if current_user.is_authenticated %}
+            {% if current_user.is_authenticated and current_user.role == 'usuario' %}
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingProfile">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseProfile" aria-expanded="false" aria-controls="collapseProfile">
-                  <i class="fa-solid fa-crown"></i> Mi Perfil
+                  Mi Perfil
                 </button>
               </h2>
               <div id="collapseProfile" class="accordion-collapse collapse" aria-labelledby="headingProfile"
