--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -1,175 +1,48 @@
-<div class="container">
-  <div class="row align-items-center py-2">
-    <div class="col-md-3 mt-2">
-      <a href="{{ url_for('index') }}">
-        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="img-fluid">
-      </a>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+  <div class="container-fluid">
+    <button class="btn btn-primary me-2" id="toggle-sidebar"><i class="fas fa-bars"></i></button>
+    <a class="navbar-brand me-auto" href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt="Logo"
+        height="30"></a>
+    <div class="nav-options">
+      <a class="nav-item" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+      <a class="nav-item" href="#"><i class="fas fa-newspaper"></i> Novedades</a>
+      {% if current_user.is_authenticated %}
+      <a class="nav-item" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline">
+          Hacerse Pro</span></a>
+      {% else %}
+      <a class="nav-item" href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline">
+          Registrarse</span></a>
+      {% endif %}
     </div>
-    <!--
-    <div class="col-md-6 text-center me-auto">
-      <form id="searchForm" class="d-flex justify-content-center">
-       <div class="input-group"> 
-          <input id="searchInput" class="form-control form-control-lg" type="search" placeholder="Buscar"
-            aria-label="Search">
-          <button class="btn btn-outline-secondary btn-lg" type="button" id="searchButton"><i
-              class="fas fa-search"></i></button>
-        </div>
-      </form>
-    </div>
+  </div>
 
--->
-    <div class="col-md-6 text-center">
-    </div>
-    {% if not current_user.is_authenticated %}
-    <div class="col-md-3 mt-2">
-      <div class="dropdown">
-        <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
-          <i class="fa-solid fa-key"></i> login
-        </a>
-        <!--  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+  {% if not current_user.is_authenticated %}
+  <div class="col-md-3 mt-2">
+    <div class="dropdown">
+      <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
+        <i class="fa-solid fa-key"></i> login
+      </a>
+      <!--  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
             <li><a class="dropdown-item" href="#">Recuperar contraseña</a></li>
           </ul> -->
-      </div>
-    </div>
-    {% else %}
-    <div class="col-md-3 mt-2">
-      <div class="dropdown">
-        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile"
-          data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="fas fa-user"></i> {{ current_user.username }}
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
-          {% if current_user.is_authenticated %}
-          <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
-          <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-          <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
-          <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
-          <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
-          {% else %}
-          <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
-    {%endif%}
-
-  </div>
-</div>
-
-<!--
-<script>
-  // JavaScript para enviar el formulario al presionar Enter en la caja de búsqueda
-  document.getElementById("searchInput").addEventListener("keyup", function (event) {
-    if (event.key === "Enter") {
-      event.preventDefault(); // Prevenir el comportamiento predeterminado de enviar el formulario
-      document.getElementById("searchForm").submit(); // Enviar el formulario
-    }
-  });
-
-  // JavaScript para hacer clic en el botón de búsqueda al hacer clic en el ícono de búsqueda
-  document.getElementById("searchButton").addEventListener("click", function () {
-    document.getElementById("searchForm").submit(); // Enviar el formulario
-  });
-</script>
---><nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse d-lg-flex" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i><span class="d-lg-inline"> Dashboard</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-newspaper"></i><span class="d-lg-inlie"> Novedades</span></a>
-        </li>
-        <li class="nav-item">
-          {% if current_user.is_authenticated %}
-          <a class="nav-link" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline"> Hacerse Pro</span></a>
-          {% else %}
-          <a class="nav-link" href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline"> Registrarse</span></a>
-          {% endif %}
-        </li>
-      </ul>
     </div>
   </div>
+  {% else %}
+  <div class="dropdown">
+    <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile" data-bs-toggle="dropdown" aria-expanded="false">
+      <i class="fas fa-user"></i> {{ current_user.username }}
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
+      <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
+      <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+      <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
+      <li><hr class="dropdown-divider"></li> <!-- Separador -->
+      <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
+      <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
+    </ul>
+  </div>
+  
+  {%endif%}
 </nav>
-
-<!--
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Novedades</a>
-        </li>
-
-        <li class="nav-item">
-          {% if current_user.is_authenticated %}
-          <a class="nav-link" href="{{ url_for('index') }}">Hacerse Pro</a>
-          {% else %}
-          <a class="nav-link" href="{{ url_for('register') }}">Registrarse</a>
-          {% endif %}
-        </li>
-
-      </ul>
-      <div class="col-md-auto text-end">
-        <div class="dropdown">
-          <a class="btn " href="#" role="button" id="dropdownMenuLink"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-question-circle"></i>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#"><i class="fas fa-question-circle"></i> Ayuda</a></li>
-            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Tickets</a></li>
-            <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> FAQ</a></li>
-          </ul>
-        
-        </div>
-      </div>
-    -->
-<!--
-
-      {% if not current_user.is_authenticated %}
-      <div class="col-md-auto text-end">
-        <div class="dropdown">
-          <a class="btn btn-outline-secondary  " href="{{ url_for('login') }}">
-            <i class="fa-solid fa-key"></i> login
-          </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
-            <li><a class="dropdown-item" href="#">Recuperar contraseña</a></li>
-          </ul> 
-        </div>
-      </div>
-      {% else %}
-      <div class="col-md-auto text-end">
-        <div class="dropdown">
-          <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuProfile"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-user"></i> {{ current_user.username }}
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuProfile">
-            {% if current_user.is_authenticated %}
-            <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Tickets</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
-            {% else %}
-            <li><a class="dropdown-item" href="{{ url_for('login') }}"><i class="fas fa-user"></i> Login</a></li>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-      {%endif%}
-      </div>
-</div>
-</nav>
--->
+<!-- /Navbar -->
