--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,13 +10,12 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+ 
   <!-- Agrega otros enlaces CSS si es necesario -->
-
-  <!-- Agrega otros enlaces CSS si es necesario 
   
    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-  -->
+  
 
   <!-- SimpleDatatables CSS -->
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet">
@@ -24,179 +23,191 @@
 
 
   <style>
-    #sidebar {
-      transition: all 0.3s;
-      margin-top: 60px;
-      /* Ajusta este valor según sea necesario */
-    }
-
-    #main-content {
-      margin-top: 60px;
-      /* Ajusta este valor según sea necesario */
-    }
-
-    .navbar {
-      background-color: #f8f9fa;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1000;
-    }
-
   
-    .nav-options {
-      display: flex;
-      align-items: center;
-    }
-
-    .nav-item {
-      margin-right: 20px;
-      font-size: 18px;
-    }
-
-    @media (max-width: 768px) {
-
-      #main-content,
-      #sidebar {
-        margin-top: 118px;
-        /* Ajusta el valor según sea necesario */
-      }
-
-      .nav-options .nav-item span {
-        display: none;
-      }
-    }
   </style>
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    .container-fluid {
-      flex: 1;
-    }
-
-    .footer {
-      margin-top: auto;
-      /* Esto empujará el footer hacia abajo */
-    }
+ 
   </style>
   <style>
-    /* Estilos para el modo oscuro */
-    .dark-mode {
-      /* Define los colores y estilos para el modo oscuro */
-      background-color: #333;
-      color: #fff;
-    }
+  
   </style>
   <style>
-    .nav-options .nav-item a {
-      display: inline-block;
-      padding: 8px 16px;
-      margin: 4px;
-      border: 1px solid transparent;
-      border-radius: 4px;
-      text-decoration: none;
-      color: #fff;
-      /* Color del texto */
-      background-color: #007bff !important;
-      /* Color de fondo */
-    }
-
-    .nav-options .nav-item a:hover {
-      background-color: #0056b3 !important;
-      /* Color de fondo al pasar el ratón */
-    }
+   
   </style>
+  <!--
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const sidebar = document.getElementById('sidebar');
-      const mainContent = document.getElementById('main-content');
-      const toggleSidebarBtn = document.getElementById('toggle-sidebar');
-      const collapseStates = JSON.parse(localStorage.getItem('collapseStates')) || {};
+  document.addEventListener('DOMContentLoaded', function () {
+  const sidebar = document.getElementById('sidebar');
+  const mainContent = document.getElementById('main-content');
+  const toggleSidebarBtn = document.getElementById('toggle-sidebar');
+  const collapseStates = JSON.parse(localStorage.getItem('collapseStates')) || {};
+  const sidebarState = localStorage.getItem('sidebarState');
 
-      // Set initial collapse states
-      for (const collapseId in collapseStates) {
-        const collapse = document.getElementById(collapseId);
-        if (collapseStates[collapseId]) {
-          collapse.classList.add('show');
-        }
-      }
+  // Set initial collapse states for acordeons
+  for (const collapseId in collapseStates) {
+    const collapse = document.getElementById(collapseId);
+    if (collapseStates[collapseId]) {
+      collapse.classList.add('show');
+    }
+  }
 
-      // Toggle sidebar visibility
-      toggleSidebarBtn.addEventListener('click', function () {
-        if (sidebar.classList.contains('d-none')) {
-          sidebar.classList.remove('d-none');
-          mainContent.classList.remove('col-12');
-          mainContent.classList.add('col');
-        } else {
-          sidebar.classList.add('d-none');
-          mainContent.classList.remove('col');
-          mainContent.classList.add('col-12');
-        }
-      });
+  // Toggle sidebar visibility based on stored state
+  if (sidebarState === 'hidden') {
+    sidebar.classList.add('d-none');
+    mainContent.classList.remove('col');
+    mainContent.classList.add('col-12');
+  } else {
+    sidebar.classList.remove('d-none');
+    mainContent.classList.remove('col-12');
+    mainContent.classList.add('col');
+  }
 
-      // Save collapse states on toggle
-      const accordionItems = document.querySelectorAll('.accordion-item');
-      accordionItems.forEach(item => {
-        item.addEventListener('click', function () {
-          const collapseId = this.querySelector('.accordion-collapse').id;
-          const isExpanded = this.querySelector('.accordion-collapse').classList.contains('show');
-          collapseStates[collapseId] = isExpanded;
-          localStorage.setItem('collapseStates', JSON.stringify(collapseStates));
-        });
-      });
+  // Toggle sidebar visibility
+  toggleSidebarBtn.addEventListener('click', function () {
+    if (sidebar.classList.contains('d-none')) {
+      sidebar.classList.remove('d-none');
+      mainContent.classList.remove('col-12');
+      mainContent.classList.add('col');
+      localStorage.setItem('sidebarState', 'visible');
+    } else {
+      sidebar.classList.add('d-none');
+      mainContent.classList.remove('col');
+      mainContent.classList.add('col-12');
+      localStorage.setItem('sidebarState', 'hidden');
+    }
+  });
 
-      // Toggle dark mode
-      const darkModeToggleBtn = document.getElementById('dark-mode-toggle');
-      const body = document.body;
-
-      darkModeToggleBtn.addEventListener('click', function () {
-        body.classList.toggle('dark-mode');
-      });
+  // Save collapse states on toggle
+  const accordionItems = document.querySelectorAll('.accordion-item');
+  accordionItems.forEach(item => {
+    item.addEventListener('click', function () {
+      const collapseId = this.querySelector('.accordion-collapse').id;
+      const isExpanded = this.querySelector('.accordion-collapse').classList.contains('show');
+      collapseStates[collapseId] = isExpanded;
+      localStorage.setItem('collapseStates', JSON.stringify(collapseStates));
     });
+  });
+
+  // Toggle dark mode
+  const darkModeToggleBtn = document.getElementById('dark-mode-toggle');
+  const body = document.body;
+
+  darkModeToggleBtn.addEventListener('click', function () {
+    body.classList.toggle('dark-mode');
+  });
+});
+
   </script>
+-->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+  const sidebar = document.getElementById('sidebar');
+  const mainContent = document.getElementById('main-content');
+  const toggleSidebarBtn = document.getElementById('toggle-sidebar');
+  const collapseStates = JSON.parse(localStorage.getItem('collapseStates')) || {};
+  let sidebarState;
+
+  // Retrieve sidebar state from localStorage
+  if (localStorage.getItem('sidebarState') === 'hidden') {
+    sidebarState = 'hidden';
+  } else {
+    sidebarState = 'visible';
+  }
+
+  // Set initial collapse states for acordeons
+  for (const collapseId in collapseStates) {
+    if (Object.prototype.hasOwnProperty.call(collapseStates, collapseId)) {
+      const collapse = document.getElementById(collapseId);
+      if (collapseStates[collapseId]) {
+        collapse.classList.add('show');
+      }
+    }
+  }
+
+  // Toggle sidebar visibility based on stored state
+  if (sidebarState === 'hidden') {
+    sidebar.classList.add('d-none');
+    mainContent.classList.remove('col');
+    mainContent.classList.add('col-12');
+  } else {
+    sidebar.classList.remove('d-none');
+    mainContent.classList.remove('col-12');
+    mainContent.classList.add('col');
+  }
+
+  // Toggle sidebar visibility
+  toggleSidebarBtn.addEventListener('click', function () {
+    if (sidebar.classList.contains('d-none')) {
+      sidebar.classList.remove('d-none');
+      mainContent.classList.remove('col-12');
+      mainContent.classList.add('col');
+      localStorage.setItem('sidebarState', 'visible');
+    } else {
+      sidebar.classList.add('d-none');
+      mainContent.classList.remove('col');
+      mainContent.classList.add('col-12');
+      localStorage.setItem('sidebarState', 'hidden');
+    }
+  });
+
+  // Save collapse states on toggle
+  const accordionItems = document.querySelectorAll('.accordion-item');
+  accordionItems.forEach(item => {
+    item.addEventListener('click', function () {
+      const collapseId = this.querySelector('.accordion-collapse').id;
+      const isExpanded = this.querySelector('.accordion-collapse').classList.contains('show');
+      collapseStates[collapseId] = isExpanded;
+      localStorage.setItem('collapseStates', JSON.stringify(collapseStates));
+    });
+  });
+
+  // Toggle dark mode
+  const darkModeToggleBtn = document.getElementById('dark-mode-toggle');
+  const body = document.body;
+
+  darkModeToggleBtn.addEventListener('click', function () {
+    body.classList.toggle('dark-mode');
+  });
+});
+
+</script>
 </head>
 
 <body>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+  <div class="container-fluid">
+    <button class="btn btn-primary me-2" id="toggle-sidebar"><i class="fas fa-bars"></i></button>
+    <a class="navbar-brand me-auto" href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" height="30" width="130"></a>
+    <div class="nav-options">
 
+      <!-- Estilos para los enlaces -->
+      <a class=" btn btn-outline-primary active" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i><span class="d-lg-inline"> Dashboard</span></a>
+      <a class=" btn btn-outline-primary ms-1" href="#"><i class="fas fa-newspaper"></i><span class="d-lg-inline">Novedades</span></a>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-    <div class="container-fluid">
-      <button class="btn btn-primary me-2" id="toggle-sidebar"><i class="fas fa-bars"></i></button>
-      <a class="navbar-brand me-auto" href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt="Logo"
-          height="30"></a>
-      <div class="nav-options">
+      {% if current_user.is_authenticated %}
+      <a class=" btn btn-outline-primary ms-1" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline"> Premium</span></a>
+      {% else %}
+      <a class=" btn btn-outline-primary ms-1" href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline"> Registrarse</span></a>
+      {% endif %}
 
-        <a class="nav-item" href="{{ url_for('dashboard') }}"><i class="fas fa-tachometer-alt"></i><span
-            class="d-lg-inline"> Dashboard</span></a>
-        <a class="nav-item" href="#"><i class="fas fa-newspaper"></i><span class="d-lg-inline">Novedades</span></a>
+      <!-- Botón de logout -->
+      {% if not current_user.is_authenticated %}
+      <a class="btn btn-outline-secondary ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i> Login</a>
+      {% else %}
+      <a class="btn btn-outline-secondary ms-1" href="{{ url_for('logout') }}"><i class="fa-solid fa-key"></i> Salir</a>
+      {% endif %}
 
-        {% if current_user.is_authenticated %}
-        <a class="nav-item" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline">
-            Premium</span></a>
-        {% else %}
-        <a class="nav-item" href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i><span class="d-lg-inline">
-            Registrarse</span></a>
-        {% endif %}
+      <!-- Botón de modo oscuro -->
+      <button class="btn btn-primary ms-1" id="dark-mode-toggle"><i class="fas fa-adjust"></i></button>
 
-        <button class="btn btn-primary  mx-2" id="dark-mode-toggle"><i class="fas fa-adjust"></i></button>
-
-        {% if not current_user.is_authenticated %}
-        <a class="btn btn-outline-secondary" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i> Login</a>
-        {% else %}
-        <a class="btn btn-outline-secondary" href="{{ url_for('logout') }}"><i class="fa-solid fa-key"></i> Logout</a>
-        {% endif %}
-
-
-      </div>
     </div>
-  </nav>
-  <!-- /Navbar -->
+  </div>
+</nav>
+<!-- /Navbar -->
+
+
+
 
 
   <div class="container-fluid">
@@ -210,7 +221,7 @@
               <h2 class="accordion-header" id="headingProfile">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseProfile" aria-expanded="false" aria-controls="collapseProfile">
-                  <i class="fa-solid fa-crown"></i> Mi Perfil
+                  <i class="fa-solid fa-crown"></i>&nbsp;{{ current_user.username }}
                 </button>
               </h2>
               <div id="collapseProfile" class="accordion-collapse collapse" aria-labelledby="headingProfile"
