--- a/app/templates/admin/logs.html
+++ b/app/templates/admin/logs.html
@@ -5,27 +5,39 @@
 {% block title %}Logs{% endblock %}
 
 {% block content %}
-    <h2>Logs</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Usuario</th>
-                <th>Pagina</th>
-                <th>Evento</th>
-                <th>Descripción</th>
-                <th>Fecha y Hora</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for log in logs %}
-            <tr>
-                <td>{{ log.user.username }}</td>
-                <td>{{ log.user.page }}</td>
-                <td>{{ log.event }}</td>
-                <td>{{ log.description }}</td>
-                <td>{{ log.timestamp }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+
+<h2>Logs</h2>
+<table id="logs-table" class="table">
+    <thead>
+        <tr>
+            <th>Usuario</th>
+            <th>Evento</th>
+            <th>Descripción</th>
+            <th>Página</th>
+            <th>Fecha y Hora</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for log in logs %}
+        <tr>
+            <td>{{ log.user.username if log.user else 'No autenticado' }}</td>
+            <td>{{ log.event }}</td>
+            <td>{{ log.description }}</td>
+            <td>{{ log.page }}</td>
+            <td>{{ log.timestamp }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+
+
+ <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        new simpleDatatables.DataTable('#logs-table');
+    });
+</script>
+
+
 {% endblock %}
+
