--- a/app/templates/inc/scripts.html
+++ b/app/templates/inc/scripts.html
@@ -5,6 +5,8 @@
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
+ <!-- SimpleDatatables JS -->
+ <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest"></script>
 
 
 
