--- a/app/templates/inc/sidebar.html
+++ b/app/templates/inc/sidebar.html
@@ -1,251 +1,161 @@
-{% if current_user.is_authenticated and current_user.role == 'usuario' %}
-<div class="accordion mb-3" id="accordionAdmin">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseZero"
-        aria-expanded="false" aria-controls="collapseZero">
-        <i class="fa-solid fa-crown"></i>&nbsp; Mis Sitios
-      </button>
-    </h2>
-
-      <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdownSidebar">
-        <li><a class="dropdown-item" href="{{ url_for('index') }}">Resumen</a></li>
-        <li><a class="dropdown-item" href="{{ url_for('index') }}">Config</a></a></li>
-        <li><a class="dropdown-item" href="{{ url_for('index') }}">Sistema</a></a></li>
-      </ul>
-    -->
-    <div id="collapseZero" class="accordion-collapse collapse" aria-labelledby="headingZero"
-      data-bs-parent="#accordionAdmin">
-      <div class="accordion-body">
-        <nav class="sb-sidenav-menu-nested nav">
-          <ul>
-            <li><a class="dropdown-item" href="{{ url_for('admin_stats') }}">Estadisticas</a></a></li>
-            <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Nuevos Usuarios</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></a></li>
-            <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Sistema</a></a></li>
+<div class="p-3">
+  <nav class="accordion" id="sidebar-menu">
+    {% if current_user.is_authenticated %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingProfile">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseProfile" aria-expanded="false" aria-controls="collapseProfile">
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Hi {{ current_user.username }}</span>
+        </button>
+      </h2>
+      <div id="collapseProfile" class="accordion-collapse collapse" aria-labelledby="headingProfile"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <ul class="list-unstyled">
+            <li><a class="" href="{{ url_for('profile') }}">Mi perfil</a></li>
+            <li><a class="" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+            <li><a class="" href="{{ url_for('change_password') }}"> Seguridad</a></li>
+            <li>
+              <hr class="">
+            </li> <!-- Separador -->
+            <li><a class="" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
+            <li><a class="" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
           </ul>
-        </nav>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-{%endif %}
-{% if is_admin %}
-<div class="accordion mb-3" id="accordionAdmin">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseZero"
-        aria-expanded="false" aria-controls="collapseZero">
-        <i class="fa-solid fa-gear"></i>&nbsp;Administrador
-      </button>
-    </h2>
-    <div id="collapseZero" class="accordion-collapse collapse" aria-labelledby="headingZero"
-      data-bs-parent="#accordionAdmin">
-      <div class="accordion-body">
-        <nav class="sb-sidenav-menu-nested nav">
-          <ul>
-            <li><a class="dropdown-item" href="{{ url_for('admin_stats') }}">Estadisticas</a></a></li>
-            <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Nuevos Usuarios</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></a></li>
-            <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Sistema</a></a></li>
+    {% endif %}
+    {% if current_user.is_authenticated and current_user.role == 'usuario' %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingMisSitios">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseMisSitios" aria-expanded="false" aria-controls="collapseMisSitios">
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Mis Sitios</span>
+        </button>
+      </h2>
+      <div id="collapseMisSitios" class="accordion-collapse collapse" aria-labelledby="headingMisSitios"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <nav class="sb-sidenav-menu-nested nav">
+            <ul class="list-unstyled">
+              <li><a class="" href="#">Sitio 1</a></li>
+              <li><a class="" href="#">Sitio 2</a></li>
+              <li><a class="" href="#">Sitio 3</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% if is_admin %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingAdmin">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseAdmin" aria-expanded="false" aria-controls="collapseAdmin">
+          <i class="fa-solid fa-gear"></i>&nbsp;<span class="item-responsive">Admin</span>
+        </button>
+      </h2>
+      <div id="collapseAdmin" class="accordion-collapse collapse" aria-labelledby="headingAdmin"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <nav class="sb-sidenav-menu-nested nav">
+            <ul class="list-unstyled">
+              <li><a class="" href="{{ url_for('admin_stats') }}">Estadisticas</a></li>
+              <li><a class="" href="{{ url_for('admin_register') }}">Nuevos Usuarios</a></li>
+              <li><a class="" href="{{ url_for('configuracion') }}">Config</a></li>
+              <li><a class="" href="{{ url_for('logs') }}">Logs</a></li>
+              <li><a class="" href="{{ url_for('usuarios') }}">Sistema</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingItem1">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseItem1" aria-expanded="false" aria-controls="collapseItem1">
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Item 2</span>
+        </button>
+      </h2>
+      <div id="collapseItem1" class="accordion-collapse collapse" aria-labelledby="headingItem1"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <ul class="list-unstyled">
+            <li><a href="#">Subitem 1.1</a></li>
+            <li><a href="#">Subitem 1.2</a></li>
           </ul>
-        </nav>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingItem2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseItem2" aria-expanded="false" aria-controls="collapseItem2">
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Item 2</span>
+        </button>
+      </h2>
+      <div id="collapseItem2" class="accordion-collapse collapse" aria-labelledby="headingItem2"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <ul class="list-unstyled">
+            <li><a href="#">Subitem 2.1</a></li>
+            <li><a href="#">Subitem 2.2</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingItem3">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseItem3" aria-expanded="false" aria-controls="collapseItem3">
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Item 3</span>
+        </button>
+      </h2>
+      <div id="collapseItem3" class="accordion-collapse collapse" aria-labelledby="headingItem3"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <ul class="list-unstyled">
+            <li><a href="#">Subitem 2.1</a></li>
+            <li><a href="#">Subitem 2.2</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingItem4">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseItem4" aria-expanded="false" aria-controls="collapseItem4">
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Item 4</span>
+        </button>
+      </h2>
+      <div id="collapseItem4" class="accordion-collapse collapse" aria-labelledby="headingItem4"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <ul class="list-unstyled">
+            <li><a href="#">Subitem 2.1</a></li>
+            <li><a href="#">Subitem 2.2</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingItem5">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapseItem5" aria-expanded="false" aria-controls="collapseItem5">
+          <i class="fa-solid fa-crown"></i>&nbsp;<span class="item-responsive">Item 5</span>
+        </button>
+      </h2>
+      <div id="collapseItem5" class="accordion-collapse collapse" aria-labelledby="headingItem5"
+        data-bs-parent="#sidebar-menu">
+        <div class="accordion-body">
+          <ul class="list-unstyled">
+            <li><a href="#">Subitem 2.1</a></li>
+            <li><a href="#">Subitem 2.2</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </nav>
 </div>
-  {% endif %}
-
-  <div class="accordion mb-3" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-          aria-expanded="false" aria-controls="collapseOne">
-          <i class="fa-solid fa-wheelchair fa-fw"></i> Accesibilidad
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-        data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <nav class="sb-sidenav-menu-nested nav">
-            <ul>
-              <li><a class="nav-link {% if request.endpoint == 'accesibilidad_resumen_dominio' %} active {% endif %}"
-                  href=" /accesibilidad/resumen/">Resumen</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'analisis_aaa' %} active {% endif %}"
-                  href="/analisis-aaa/">WCAG-AA</a></li>
-              <!--
-                        <a class="nav-link {% if request.endpoint == 'responsive' %} active {% endif %}"
-                        href="/responsive/">Responsive</a>
--->
-              <li><a class="nav-link {% if request.endpoint == 'legibilidad' %} active {% endif %}"
-                  href="/legibilidad/">Legibilidad</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'imagenes' %} active {% endif %}"
-                  href="/imagenes/">Im&aacute;genes</a></li>
-
-
-            </ul>
-
-          </nav>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading2">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2"
-          aria-expanded="false" aria-controls="collapse2">
-          <i class="fas fa-envelop"></i> EMAIL
-        </button>
-      </h2>
-      <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
-        data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <nav class="sb-sidenav-menu-nested nav">
-            <ul>
-              <li><a class="nav-link {% if request.endpoint == 'accesibilidad_resumen_dominio' %} active {% endif %}"
-                  href=" /accesibilidad/resumen/">Resumen</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'analisis_aaa' %} active {% endif %}"
-                  href="/analisis-aaa/">WCAG-AA</a></li>
-              <!--
-                        <a class="nav-link {% if request.endpoint == 'responsive' %} active {% endif %}"
-                        href="/responsive/">Responsive</a>
--->
-              <li><a class="nav-link {% if request.endpoint == 'legibilidad' %} active {% endif %}"
-                  href="/legibilidad/">Legibilidad</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'imagenes' %} active {% endif %}"
-                  href="/imagenes/">Im&aacute;genes</a></li>
-
-
-            </ul>
-
-          </nav>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading3">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3"
-          aria-expanded="false" aria-controls="collapse3">
-          <i class="fa-solid fa-thumbs-up"></i>Usabilidad
-        </button>
-      </h2>
-      <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
-        data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <nav class="sb-sidenav-menu-nested nav">
-            <ul>
-              <li><a class="nav-link {% if request.endpoint == 'accesibilidad_resumen_dominio' %} active {% endif %}"
-                  href=" /accesibilidad/resumen/">Resumen</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'analisis_aaa' %} active {% endif %}"
-                  href="/analisis-aaa/">WCAG-AA</a></li>
-              <!--
-                        <a class="nav-link {% if request.endpoint == 'responsive' %} active {% endif %}"
-                        href="/responsive/">Responsive</a>
--->
-              <li><a class="nav-link {% if request.endpoint == 'legibilidad' %} active {% endif %}"
-                  href="/legibilidad/">Legibilidad</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'imagenes' %} active {% endif %}"
-                  href="/imagenes/">Im&aacute;genes</a></li>
-
-
-            </ul>
-
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading4">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4"
-          aria-expanded="false" aria-controls="collapse4">
-          <i class="fas fa-chart-area"></i> SEO
-        </button>
-      </h2>
-      <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
-        data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <nav class="sb-sidenav-menu-nested nav">
-            <ul>
-              <li><a class="nav-link {% if request.endpoint == 'accesibilidad_resumen_dominio' %} active {% endif %}"
-                  href=" /accesibilidad/resumen/">Resumen</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'analisis_aaa' %} active {% endif %}"
-                  href="/analisis-aaa/">WCAG-AA</a></li>
-              <!--
-                        <a class="nav-link {% if request.endpoint == 'responsive' %} active {% endif %}"
-                        href="/responsive/">Responsive</a>
--->
-              <li><a class="nav-link {% if request.endpoint == 'legibilidad' %} active {% endif %}"
-                  href="/legibilidad/">Legibilidad</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'imagenes' %} active {% endif %}"
-                  href="/imagenes/">Im&aacute;genes</a></li>
-
-
-            </ul>
-
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading5">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5"
-          aria-expanded="false" aria-controls="collapse5">
-          <i class="fas fa-chart-area"></i> Ortografia
-        </button>
-      </h2>
-      <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
-        data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <nav class="sb-sidenav-menu-nested nav">
-            <ul>
-              <li><a class="nav-link {% if request.endpoint == 'accesibilidad_resumen_dominio' %} active {% endif %}"
-                  href=" /accesibilidad/resumen/">Resumen</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'analisis_aaa' %} active {% endif %}"
-                  href="/analisis-aaa/">WCAG-AA</a></li>
-              <!--
-                        <a class="nav-link {% if request.endpoint == 'responsive' %} active {% endif %}"
-                        href="/responsive/">Responsive</a>
--->
-              <li><a class="nav-link {% if request.endpoint == 'legibilidad' %} active {% endif %}"
-                  href="/legibilidad/">Legibilidad</a></li>
-
-              <li><a class="nav-link {% if request.endpoint == 'imagenes' %} active {% endif %}"
-                  href="/imagenes/">Im&aacute;genes</a></li>
-
-
-            </ul>
-
-          </nav>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--
-{% if current_user.role == 'admin' %}
-<div class="sidebar-dropdown">
-  <ul class="navbar-nav">
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSidebar" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        <i class="fa-solid fa-crown"></i> {{ current_user.username }}
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdownSidebar">
-        <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir usuarios</a></li>
-        <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></a></li>
-        <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Sistema</a></a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-{% endif %}
--->
