bread and crumbs

--- a/app/templates/inc/breadcrumbs.html
+++ b/app/templates/inc/breadcrumbs.html
@@ -1,7 +1,8 @@
 <!-- Breadcrumb -->
+{% if breadcrumbs %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-
+        <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house"></i></li></a>
         {% for crumb in breadcrumbs %}
         {% if loop.last %}
         <li class="breadcrumb-item active" aria-current="page">{{ crumb.text }}</li>
@@ -11,3 +12,4 @@
         {% endfor %}
     </ol>
 </nav>
+{% endif %}
