--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,20 +1,3 @@
-@media (min-width: 360px) and (max-width: 768px)
-{
-
-    #main-content,
-    #sidebar {
-        margin-top: 127px;
-        /* Ajusta el valor según sea necesario */
-    }
-
-    .nav-options .btn span,
-    .accordion-button .item-responsive {
-        display: none;
-    }
-
-
-}
-
 /* Estilos para el modo oscuro */
 .dark-mode {
     /* Define los colores y estilos para el modo oscuro */
@@ -34,21 +17,23 @@ body {
 
 .footer {
     margin-top: auto;
-    clear: both;
-    /* Esto empujará el footer hacia abajo */
+
 }
 
-#sidebar {
+/*
+ #sidebar {
     transition: all 0.3s;
     margin-top: 60px;
-    /* Ajusta este valor según sea necesario */
-}
+} 
+*/
 
 #main-content {
     margin-top: 60px;
     /* Ajusta este valor según sea necesario */
 }
 
+
+/*
 .navbar {
     background-color: #f8f9fa;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
@@ -78,67 +63,13 @@ body {
     border-radius: 4px;
     text-decoration: none;
     color: #fff;
-    /* Color del texto */
+
     background-color: #007bff !important;
-    /* Color de fondo */
+  
 }
 
 .nav-options .nav-item a:hover {
     background-color: #0056b3 !important;
-    /* Color de fondo al pasar el ratón */
+   
 }
-
-
-@media(max-width:767px){
-    .navbar .navbar-collapse.collapsing{ 
-      height:auto !important;
-    }
-    .navbar .lateral-left{
-      left:-100%; 
-      animation: slide-out-left 200ms forwards;
-    }
-    .navbar .lateral-left.open{ 
-      animation: slide-in-left 200ms forwards;
-    }
-    .navbar .lateral-right{
-      right:-100%;
-      animation: slide-out-right 200ms forwards;
-    }
-    .navbar .lateral-right.open{ 
-      animation: slide-in-right 200ms forwards;
-    }
-    .navbar .navbar-collapse{ 
-      top:0px; bottom:0px; 
-      position:fixed; 
-      width:80%; width:calc(100% - 60px); 
-      max-width:320px; 
-      height:auto !important;
-  
-      /* Optional styling */
-      background:#f8f8f8;
-      padding:30px;
-      top: 52px;
-    }
-    .navbar .lateral-left.open,
-    .navbar .lateral-right.open{
-      display:block !important;
-      overflow-y:auto;
-    }
-  }
-  
-  @keyframes slide-in-left{ 
-    0%		{ left:-100%; }
-    100%	{ left:0px; }
-  }
-  @keyframes slide-out-left{
-    0%		{ left:0px; }
-    100%	{ left:-100%; }
-  }
-  @keyframes slide-in-right{ 
-    0%		{ right:-100%; }
-    100%	{ right:0px; }
-  }
-  @keyframes slide-out-right{
-    0%		{ right:0px; }
-    100%	{ right:-100%; }
-  }
+*/
